# SimpleDB

./: .gitignore  README.md  pyproject.toml  simpledb.py
