[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpledb"
version = "0.2.0"
description = "SimpleX Chat Database Export Tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "sqlcipher3>=0.6.0",
    "rich>=13.0.0",
]

[project.scripts]
simpledb = "simpledb:main"

[project.urls]
Homepage = "https://github.com/cannatoshi/SimpleDB"
Repository = "https://github.com/cannatoshi/SimpleDB"

[tool.setuptools]
py-modules = ["simpledb"]
